lib/src/antlr/grammars/Apexdoc/ApexdocParser.dart
// Generated from lib/src/antlr/grammars/apexdoc/ApexdocParser.g4 by ANTLR 4.9.3
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes
import 'package:antlr4/antlr4.dart';

import 'ApexdocParserListener.dart';
import 'ApexdocParserBaseListener.dart';
const int RULE_documentation = 0, RULE_documentationContent = 1, RULE_description = 2, 
          RULE_descriptionLine = 3, RULE_descriptionLineStart = 4, RULE_descriptionLineNoSpaceNoAt = 5, 
          RULE_descriptionLineElement = 6, RULE_descriptionLineText = 7, 
          RULE_descriptionNewline = 8, RULE_tagSection = 9, RULE_blockTag = 10, 
          RULE_paramName = 11, RULE_exceptionName = 12, RULE_blockTagName = 13, 
          RULE_blockTagContent = 14, RULE_blockTagText = 15, RULE_blockTagTextElement = 16, 
          RULE_inlineTag = 17, RULE_inlineTagName = 18, RULE_inlineTagContent = 19, 
          RULE_braceExpression = 20, RULE_braceContent = 21, RULE_skipWhitespace = 22, 
          RULE_braceText = 23;
class ApexdocParser extends Parser {
  static final checkVersion = () => RuntimeMetaData.checkVersion('4.9.3', RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
      _ATN.numberOfDecisions, (i) => DFA(_ATN.getDecisionState(i), i));
  static final PredictionContextCache _sharedContextCache = PredictionContextCache();
  static const int TOKEN_PARAM = 1, TOKEN_RETURN = 2, TOKEN_EXAMPLE = 3, 
                   TOKEN_THROWS = 4, TOKEN_EXCEPTION = 5, TOKEN_NAME = 6, 
                   TOKEN_JavaLetterOrDigit = 7, TOKEN_NEWLINE = 8, TOKEN_SPACE = 9, 
                   TOKEN_TEXT_CONTENT = 10, TOKEN_TICKED_CONTENT = 11, TOKEN_CODE_BLOCK = 12, 
                   TOKEN_AT = 13, TOKEN_STAR = 14, TOKEN_SLASH = 15, TOKEN_DOT = 16, 
                   TOKEN_TICK = 17, TOKEN_JAVADOC_START = 18, TOKEN_JAVADOC_END = 19, 
                   TOKEN_HIDDEN_TAG = 20, TOKEN_INLINE_TAG_START = 21, TOKEN_BRACE_OPEN = 22, 
                   TOKEN_BRACE_CLOSE = 23;

  @override
  final List<String> ruleNames = [
    'documentation', 'documentationContent', 'description', 'descriptionLine', 
    'descriptionLineStart', 'descriptionLineNoSpaceNoAt', 'descriptionLineElement', 
    'descriptionLineText', 'descriptionNewline', 'tagSection', 'blockTag', 
    'paramName', 'exceptionName', 'blockTagName', 'blockTagContent', 'blockTagText', 
    'blockTagTextElement', 'inlineTag', 'inlineTagName', 'inlineTagContent', 
    'braceExpression', 'braceContent', 'skipWhitespace', 'braceText'
  ];

  static final List<String?> _LITERAL_NAMES = [
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, "'@'", "'*'", "'/'", "'.'", "'`'", null, null, null, "'{@'", 
      "'{'", "'}'"
  ];
  static final List<String?> _SYMBOLIC_NAMES = [
      null, "PARAM", "RETURN", "EXAMPLE", "THROWS", "EXCEPTION", "NAME", 
      "JavaLetterOrDigit", "NEWLINE", "SPACE", "TEXT_CONTENT", "TICKED_CONTENT", 
      "CODE_BLOCK", "AT", "STAR", "SLASH", "DOT", "TICK", "JAVADOC_START", 
      "JAVADOC_END", "HIDDEN_TAG", "INLINE_TAG_START", "BRACE_OPEN", "BRACE_CLOSE"
  ];
  static final Vocabulary VOCABULARY = VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary {
    return VOCABULARY;
  }

  @override
  String get grammarFileName => 'ApexdocParser.g4';

  @override
  String get serializedATN => _serializedATN;

  @override
  ATN getATN() {
   return _ATN;
  }

  ApexdocParser(TokenStream input) : super(input) {
    interpreter = ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  DocumentationContext documentation() {
    dynamic _localctx = DocumentationContext(context, state);
    enterRule(_localctx, 0, RULE_documentation);
    try {
      int _alt;
      state = 69;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 2, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 48;
        match(TOKEN_EOF);
        break;
      case 2:
        enterOuterAlt(_localctx, 2);
        state = 49;
        match(TOKEN_JAVADOC_START);
        state = 53;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 0, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 50;
            skipWhitespace(); 
          }
          state = 55;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 0, context);
        }
        state = 56;
        documentationContent();
        state = 57;
        match(TOKEN_JAVADOC_END);
        state = 58;
        match(TOKEN_EOF);
        break;
      case 3:
        enterOuterAlt(_localctx, 3);
        state = 63;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 1, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 60;
            skipWhitespace(); 
          }
          state = 65;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 1, context);
        }
        state = 66;
        documentationContent();
        state = 67;
        match(TOKEN_EOF);
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  DocumentationContentContext documentationContent() {
    dynamic _localctx = DocumentationContentContext(context, state);
    enterRule(_localctx, 2, RULE_documentationContent);
    int _la;
    try {
      int _alt;
      state = 100;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 7, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 71;
        description();
        state = 75;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while (_la == TOKEN_NEWLINE || _la == TOKEN_SPACE) {
          state = 72;
          skipWhitespace();
          state = 77;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        break;
      case 2:
        enterOuterAlt(_localctx, 2);
        state = 81;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 4, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 78;
            skipWhitespace(); 
          }
          state = 83;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 4, context);
        }
        state = 84;
        tagSection();
        break;
      case 3:
        enterOuterAlt(_localctx, 3);
        state = 85;
        description();
        state = 89;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 5, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 86;
            match(TOKEN_NEWLINE); 
          }
          state = 91;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 5, context);
        }
        state = 95;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 6, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 92;
            skipWhitespace(); 
          }
          state = 97;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 6, context);
        }
        state = 98;
        tagSection();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  DescriptionContext description() {
    dynamic _localctx = DescriptionContext(context, state);
    enterRule(_localctx, 4, RULE_description);
    int _la;
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      state = 102;
      descriptionLine();
      state = 112;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 9, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          state = 104; 
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          do {
            state = 103;
            descriptionNewline();
            state = 106; 
            errorHandler.sync(this);
            _la = tokenStream.LA(1)!;
          } while (_la == TOKEN_NEWLINE);
          state = 108;
          descriptionLine(); 
        }
        state = 114;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 9, context);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  DescriptionLineContext descriptionLine() {
    dynamic _localctx = DescriptionLineContext(context, state);
    enterRule(_localctx, 6, RULE_descriptionLine);
    try {
      int _alt;
      state = 129;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 12, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 115;
        descriptionLineStart();
        state = 119;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 10, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 116;
            descriptionLineElement(); 
          }
          state = 121;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 10, context);
        }
        break;
      case 2:
        enterOuterAlt(_localctx, 2);
        state = 122;
        inlineTag();
        state = 126;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 11, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 123;
            descriptionLineElement(); 
          }
          state = 128;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 11, context);
        }
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  DescriptionLineStartContext descriptionLineStart() {
    dynamic _localctx = DescriptionLineStartContext(context, state);
    enterRule(_localctx, 8, RULE_descriptionLineStart);
    int _la;
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      state = 132;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_SPACE) {
        state = 131;
        match(TOKEN_SPACE);
      }

      state = 135; 
      errorHandler.sync(this);
      _alt = 1;
      do {
        switch (_alt) {
        case 1:
          state = 134;
          descriptionLineNoSpaceNoAt();
          break;
        default:
          throw NoViableAltException(this);
        }
        state = 137; 
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 14, context);
      } while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER);
      state = 143;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 16, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          state = 141;
          errorHandler.sync(this);
          switch (tokenStream.LA(1)!) {
          case TOKEN_NAME:
          case TOKEN_TEXT_CONTENT:
          case TOKEN_TICKED_CONTENT:
          case TOKEN_STAR:
          case TOKEN_SLASH:
          case TOKEN_INLINE_TAG_START:
          case TOKEN_BRACE_OPEN:
          case TOKEN_BRACE_CLOSE:
            state = 139;
            descriptionLineNoSpaceNoAt();
            break;
          case TOKEN_SPACE:
            state = 140;
            match(TOKEN_SPACE);
            break;
          default:
            throw NoViableAltException(this);
          } 
        }
        state = 145;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 16, context);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  DescriptionLineNoSpaceNoAtContext descriptionLineNoSpaceNoAt() {
    dynamic _localctx = DescriptionLineNoSpaceNoAtContext(context, state);
    enterRule(_localctx, 10, RULE_descriptionLineNoSpaceNoAt);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 146;
      _la = tokenStream.LA(1)!;
      if (!((((_la) & ~0x3f) == 0 && ((BigInt.one << _la) & ((BigInt.one << TOKEN_NAME) | (BigInt.one << TOKEN_TEXT_CONTENT) | (BigInt.one << TOKEN_TICKED_CONTENT) | (BigInt.one << TOKEN_STAR) | (BigInt.one << TOKEN_SLASH) | (BigInt.one << TOKEN_INLINE_TAG_START) | (BigInt.one << TOKEN_BRACE_OPEN) | (BigInt.one << TOKEN_BRACE_CLOSE))) != BigInt.zero))) {
      errorHandler.recoverInline(this);
      } else {
        if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  DescriptionLineElementContext descriptionLineElement() {
    dynamic _localctx = DescriptionLineElementContext(context, state);
    enterRule(_localctx, 12, RULE_descriptionLineElement);
    try {
      state = 150;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 17, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 148;
        inlineTag();
        break;
      case 2:
        enterOuterAlt(_localctx, 2);
        state = 149;
        descriptionLineText();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  DescriptionLineTextContext descriptionLineText() {
    dynamic _localctx = DescriptionLineTextContext(context, state);
    enterRule(_localctx, 14, RULE_descriptionLineText);
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      state = 154; 
      errorHandler.sync(this);
      _alt = 1;
      do {
        switch (_alt) {
        case 1:
          state = 154;
          errorHandler.sync(this);
          switch (tokenStream.LA(1)!) {
          case TOKEN_NAME:
          case TOKEN_TEXT_CONTENT:
          case TOKEN_TICKED_CONTENT:
          case TOKEN_STAR:
          case TOKEN_SLASH:
          case TOKEN_INLINE_TAG_START:
          case TOKEN_BRACE_OPEN:
          case TOKEN_BRACE_CLOSE:
            state = 152;
            descriptionLineNoSpaceNoAt();
            break;
          case TOKEN_SPACE:
            state = 153;
            match(TOKEN_SPACE);
            break;
          default:
            throw NoViableAltException(this);
          }
          break;
        default:
          throw NoViableAltException(this);
        }
        state = 156; 
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 19, context);
      } while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  DescriptionNewlineContext descriptionNewline() {
    dynamic _localctx = DescriptionNewlineContext(context, state);
    enterRule(_localctx, 16, RULE_descriptionNewline);
    try {
      enterOuterAlt(_localctx, 1);
      state = 158;
      match(TOKEN_NEWLINE);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  TagSectionContext tagSection() {
    dynamic _localctx = TagSectionContext(context, state);
    enterRule(_localctx, 18, RULE_tagSection);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 163;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while ((((_la) & ~0x3f) == 0 && ((BigInt.one << _la) & ((BigInt.one << TOKEN_PARAM) | (BigInt.one << TOKEN_RETURN) | (BigInt.one << TOKEN_EXAMPLE) | (BigInt.one << TOKEN_THROWS) | (BigInt.one << TOKEN_EXCEPTION) | (BigInt.one << TOKEN_SPACE) | (BigInt.one << TOKEN_AT))) != BigInt.zero)) {
        state = 160;
        blockTag();
        state = 165;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  BlockTagContext blockTag() {
    dynamic _localctx = BlockTagContext(context, state);
    enterRule(_localctx, 20, RULE_blockTag);
    int _la;
    try {
      int _alt;
      state = 261;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 38, context)) {
      case 1:
        _localctx = ParamBlockTagContext(_localctx);
        enterOuterAlt(_localctx, 1);
        state = 167;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_SPACE) {
          state = 166;
          match(TOKEN_SPACE);
        }

        state = 169;
        match(TOKEN_PARAM);
        state = 173;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 22, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 170;
            match(TOKEN_SPACE); 
          }
          state = 175;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 22, context);
        }
        state = 176;
        paramName();
        state = 180;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 23, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 177;
            match(TOKEN_SPACE); 
          }
          state = 182;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 23, context);
        }
        state = 186;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 24, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 183;
            blockTagContent(); 
          }
          state = 188;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 24, context);
        }
        break;
      case 2:
        _localctx = ThrowsBlockTagContext(_localctx);
        enterOuterAlt(_localctx, 2);
        state = 190;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_SPACE) {
          state = 189;
          match(TOKEN_SPACE);
        }

        state = 192;
        _la = tokenStream.LA(1)!;
        if (!(_la == TOKEN_THROWS || _la == TOKEN_EXCEPTION)) {
        errorHandler.recoverInline(this);
        } else {
          if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
          errorHandler.reportMatch(this);
          consume();
        }
        state = 196;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 26, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 193;
            match(TOKEN_SPACE); 
          }
          state = 198;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 26, context);
        }
        state = 199;
        exceptionName();
        state = 203;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 27, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 200;
            match(TOKEN_SPACE); 
          }
          state = 205;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 27, context);
        }
        state = 209;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 28, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 206;
            blockTagContent(); 
          }
          state = 211;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 28, context);
        }
        break;
      case 3:
        _localctx = ReturnBlockTagContext(_localctx);
        enterOuterAlt(_localctx, 3);
        state = 213;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_SPACE) {
          state = 212;
          match(TOKEN_SPACE);
        }

        state = 215;
        match(TOKEN_RETURN);
        state = 219;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 30, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 216;
            match(TOKEN_SPACE); 
          }
          state = 221;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 30, context);
        }
        state = 225;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 31, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 222;
            blockTagContent(); 
          }
          state = 227;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 31, context);
        }
        break;
      case 4:
        _localctx = ExampleBlockTagContext(_localctx);
        enterOuterAlt(_localctx, 4);
        state = 229;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_SPACE) {
          state = 228;
          match(TOKEN_SPACE);
        }

        state = 231;
        match(TOKEN_EXAMPLE);
        state = 235;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 33, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 232;
            skipWhitespace(); 
          }
          state = 237;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 33, context);
        }
        state = 241;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 34, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 238;
            blockTagContent(); 
          }
          state = 243;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 34, context);
        }
        break;
      case 5:
        _localctx = DefaultBlockTagContext(_localctx);
        enterOuterAlt(_localctx, 5);
        state = 245;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_SPACE) {
          state = 244;
          match(TOKEN_SPACE);
        }

        state = 247;
        match(TOKEN_AT);
        state = 248;
        blockTagName();
        state = 252;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 36, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 249;
            match(TOKEN_SPACE); 
          }
          state = 254;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 36, context);
        }
        state = 258;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 37, context);
        while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1) {
            state = 255;
            blockTagContent(); 
          }
          state = 260;
          errorHandler.sync(this);
          _alt = interpreter!.adaptivePredict(tokenStream, 37, context);
        }
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ParamNameContext paramName() {
    dynamic _localctx = ParamNameContext(context, state);
    enterRule(_localctx, 22, RULE_paramName);
    try {
      enterOuterAlt(_localctx, 1);
      state = 263;
      blockTagTextElement();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ExceptionNameContext exceptionName() {
    dynamic _localctx = ExceptionNameContext(context, state);
    enterRule(_localctx, 24, RULE_exceptionName);
    try {
      enterOuterAlt(_localctx, 1);
      state = 265;
      blockTagTextElement();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  BlockTagNameContext blockTagName() {
    dynamic _localctx = BlockTagNameContext(context, state);
    enterRule(_localctx, 26, RULE_blockTagName);
    try {
      enterOuterAlt(_localctx, 1);
      state = 267;
      match(TOKEN_NAME);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  BlockTagContentContext blockTagContent() {
    dynamic _localctx = BlockTagContentContext(context, state);
    enterRule(_localctx, 28, RULE_blockTagContent);
    try {
      state = 271;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_NAME:
      case TOKEN_NEWLINE:
      case TOKEN_SPACE:
      case TOKEN_TEXT_CONTENT:
      case TOKEN_TICKED_CONTENT:
      case TOKEN_CODE_BLOCK:
      case TOKEN_STAR:
      case TOKEN_SLASH:
      case TOKEN_BRACE_OPEN:
      case TOKEN_BRACE_CLOSE:
        enterOuterAlt(_localctx, 1);
        state = 269;
        blockTagText();
        break;
      case TOKEN_INLINE_TAG_START:
        enterOuterAlt(_localctx, 2);
        state = 270;
        inlineTag();
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }
